--- a/package.json
+++ b/package.json
@@ -1,45 +1,53 @@
 {
   "name": "typescript-builder",
   "license": "MIT",
-  "dependencies": {
-    "@flk/fs": "^1.3.0",
-    "@mongez/events": "^2.1.0",
-    "@mongez/fs": "^3.0.1",
-    "@mongez/http": "^2.2.5",
-    "@mongez/supportive-is": "^1.0.12",
-    "@rollup/plugin-typescript": "^11.1.1",
-    "chalk": "4",
-    "cross-spawn": "^7.0.3",
-    "postcss": "^8.4.24",
-    "rollup": "^3.25.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-rename-node-modules": "^1.3.1",
-    "ts-loader": "^9.4.3",
-    "tslib": "^2.5.3",
-    "typescript": "^5.1.3"
-  },
   "scripts": {
     "update": "ncu -u -x chalk",
     "watch": "tsc -w",
     "start": "nodemon --exec ts-node index.ts",
-    "build": "npx ts-node index.ts"
+    "build": "npx ts-node index.ts",
+    "format": "npx prettier --write ./src/**/*.{js,jsx,ts,tsx,css,scss,md,json} --config ./.prettierrc.json"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.5",
+  "dependencies": {
+    "@flk/fs": "^1.3.0",
+    "@mongez/copper": "^1.0.1",
+    "@mongez/events": "^2.1.0",
+    "@mongez/fs": "^3.0.4",
+    "@mongez/http": "^2.2.6",
+    "@mongez/supportive-is": "^2.0.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "cross-spawn": "^7.0.3",
+    "postcss": "^8.4.31",
+    "rollup": "^4.3.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-rename-node-modules": "^1.3.1",
+    "ts-loader": "^9.5.0",
+    "tslib": "^2.6.2",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@types/node": "^20.3.1",
-    "cli-spinners": "^2.9.0",
-    "node-sass": "^9.0.0",
-    "nodemon": "^2.0.22",
-    "prettier": "^2.8.8",
-    "rollup-plugin-prettier": "^3.0.0",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "cli-spinners": "^2.9.1",
+    "prettier": "^3.0.3",
+    "rollup-plugin-prettier": "^4.1.1",
     "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.63.6",
-    "ts-node": "^10.9.1"
+    "sass": "^1.69.5",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier-plugin-organize-imports": "^3.2.4"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "nodemon": "^3.0.1",
+    "@types/node": "^20.9.0",
+    "npm-check-updates": "^16.14.6",
+    "typescript": "^5.2.2"
   }
 }
